--- a/templates/master_header.html
+++ b/templates/master_header.html
@@ -8,6 +8,7 @@
     <title>Strong Gravitational Lens database</title>
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.typekit.net/pkl4bli.css">
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <link href="{% static 'css/jb_style.css' %}" rel="stylesheet" />
     <link href="{% static 'css/sled-global.css' %}" rel="stylesheet" />
@@ -16,7 +17,6 @@
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" integrity="sha384-pvXSwSU09c+q9mPyY++ygUHWIYRoaxgnJ/JC5wcOzMb/NVVu+IDniiB9qWp3ZNWM" crossorigin="anonymous" type="text/javascript"></script>
-    <script src="https://use.typekit.net/pkl4bli.js" integrity="sha384-bkjD7gO2Z4bX2cz58e/rtES14WZizX+lSKUnUAUl7YpWkCJKtCab29AylnquGaJU" crossorigin="anonymous" type="text/javascript" nonce="{{request.csp_nonce}}"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js" integrity="sha384-d3UHjPdzJkZuk5H3qKYMLRyWLAQBJbby2yr2Q58hXXtAGF8RSNO9jpLDlKKPv5v3" crossorigin="anonymous" type="text/javascript"></script>
     <script src="{% static 'js/global_search.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/load_fonts.js' %}" type="text/javascript"></script>
